--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "weixin-robot",
+  "name": "weixin-robot-jimu",
   "version": "0.1.0",
   "repository": "git://github.com/qaz3954179/weixin-robot.git",
   "description": "微信公众平台开放消息接口机器人 A robot for wechat.",
